[workspace]
members                 = [
  ".",
]
default-members         = [
  ".",
]
resolver                = "2"

[workspace.dependencies]
displaydoc              = "0.2.4"
thiserror               = "1.0.48"

[workspace.package]
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "MIT"
rust-version            = "1.59.0"

keywords                = []
categories              = []
homepage                = "https://github.com/cosmicexplorer/async-io-adapters"
repository              = "https://github.com/cosmicexplorer/async-io-adapters"

[profile.release]
strip                   = false
debug                   = true
lto                     = true

[package]
name                    = "async-io-adapters"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
rust-version.workspace  = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
displaydoc.workspace    = true
thiserror.workspace     = true
