[workspace]
members                 = [
  ".",
]
default-members         = [
  ".",
]
resolver                = "2"

[workspace.dependencies]
displaydoc              = "0.2.4"
thiserror               = "1.0.48"

[workspace.package]
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "MIT"
rust-version            = "1.59.0"

keywords                = []
categories              = []
homepage                = "https://github.com/cosmicexplorer/async-io-adapters"
repository              = "https://github.com/cosmicexplorer/async-io-adapters"

[profile.release]
strip                   = false
debug                   = true
lto                     = true

[package]
name                    = "async-io-adapters"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
rust-version.workspace  = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
cfg-if                  = "1"
futures-util            = { version = "0.3", optional = true, features = ["io"] }
num_enum                = "0.7"
# once_cell               = "1.18"
# parking_lot             = "0.10"
pin-project-lite        = "0.2"
tokio                   = { version = "1", optional = true }

[features]
tokio                   = ["dep:tokio"]
futures                 = ["dep:futures-util"]
default                 = ["futures", "tokio"]

[dev-dependencies]
tokio-test              = "0.4.3"
