[workspace]
members                 = [
  ".",
]
default-members         = [
  ".",
]
resolver                = "2"

[workspace.dependencies]
displaydoc              = "0.2.4"
thiserror               = "1.0.48"

[workspace.package]
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "MIT"
rust-version            = "1.59.0"

keywords                = []
categories              = []
homepage                = "https://github.com/cosmicexplorer/async-io-adapters"
repository              = "https://github.com/cosmicexplorer/async-io-adapters"

[profile.release]
strip                   = false
debug                   = true
lto                     = true

[package]
name                    = "async-io-adapters"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
rust-version.workspace  = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
async_executors         = "0.7"
async-lock              = "2.8"
cfg-if                  = "1"
futures-util            = "0.3"
num_enum                = "0.7"
# once_cell               = "1.18"
oneshot                 = "0.1.6"
parking_lot             = "0.10"
pin-project-lite        = "0.2"
tokio                   = { version = "1", optional = true }
trait-set               = "0.3"

[features]
tokio-io                = ["tokio"]
futures-io              = ["futures-util/io"]
default                 = ["futures-io", "tokio-io"]

[dev-dependencies]
async_executors         = { version = "0.7", features = ["async_global"] }
tokio                   = { version = "1", features = ["fs", "io-util"] }
tokio-test              = "0.4.3"
